--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -27,9 +27,39 @@
         android:id="@+id/epi6"
         android:layout_width="52dp"
         android:layout_height="55dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="40dp"
         android:background="@drawable/deconnexion"
         android:text="6"
+        android:textColor="@android:color/white"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.581" />
+
+    <Button
+        android:id="@+id/epi4"
+        android:layout_width="52dp"
+        android:layout_height="55dp"
+        android:layout_marginEnd="80dp"
+        android:background="@drawable/deconnexion"
+        android:text="4"
+        android:textColor="@android:color/white"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/epi5"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.581" />
+
+    <Button
+        android:id="@+id/epi3"
+        android:layout_width="52dp"
+        android:layout_height="55dp"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/deconnexion"
+        android:text="3"
         android:textColor="@android:color/white"
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,38 +68,10 @@
         app:layout_constraintVertical_bias="0.173" />
 
     <Button
-        android:id="@+id/epi4"
-        android:layout_width="52dp"
-        android:layout_height="55dp"
-        android:layout_marginEnd="12dp"
-        android:background="@drawable/deconnexion"
-        android:text="4"
-        android:textColor="@android:color/white"
-        android:textSize="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/epi5"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.173" />
-
-    <Button
-        android:id="@+id/epi3"
-        android:layout_width="52dp"
-        android:layout_height="55dp"
-        android:layout_marginEnd="12dp"
-        android:background="@drawable/deconnexion"
-        android:text="3"
-        android:textColor="@android:color/white"
-        android:textSize="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/epi4"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.173" />
-
-    <Button
         android:id="@+id/epi2"
         android:layout_width="52dp"
         android:layout_height="55dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="88dp"
         android:background="@drawable/deconnexion"
         android:text="2"
         android:textColor="@android:color/white"
@@ -90,7 +92,7 @@
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/epi2"
-        app:layout_constraintHorizontal_bias="0.818"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.173" />
@@ -99,7 +101,7 @@
         android:id="@+id/epi5"
         android:layout_width="52dp"
         android:layout_height="55dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="88dp"
         android:background="@drawable/deconnexion"
         android:text="5"
         android:textColor="@android:color/white"
@@ -107,7 +109,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/epi6"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.173" />
+        app:layout_constraintVertical_bias="0.581" />
 
     <Spinner
         android:id="@+id/heure_de_debut"
@@ -175,70 +177,72 @@
 
     <ListView
         android:id="@+id/epi1liste"
-        android:layout_width="69dp"
-        android:layout_height="464dp"
+        android:layout_width="110dp"
+        android:layout_height="200dp"
         android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.058"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/epi1"
         app:layout_constraintVertical_bias="0.0" />
 
     <ListView
         android:id="@+id/epi2liste"
-        android:layout_width="69dp"
-        android:layout_height="464dp"
+        android:layout_width="110dp"
+        android:layout_height="200dp"
         android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.127"
         app:layout_constraintStart_toEndOf="@+id/epi1liste"
         app:layout_constraintTop_toBottomOf="@+id/epi2"
         app:layout_constraintVertical_bias="0.0" />
 
     <ListView
         android:id="@+id/epi3liste"
-        android:layout_width="69dp"
-        android:layout_height="464dp"
+        android:layout_width="110dp"
+        android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.519"
         app:layout_constraintStart_toEndOf="@+id/epi2liste"
         app:layout_constraintTop_toBottomOf="@+id/epi3"
-        app:layout_constraintVertical_bias="0.126" />
+        app:layout_constraintVertical_bias="0.036" />
 
     <ListView
         android:id="@+id/epi4liste"
-        android:layout_width="69dp"
-        android:layout_height="464dp"
-        android:layout_marginEnd="132dp"
+        android:layout_width="110dp"
+        android:layout_height="190dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/epi3liste"
+        app:layout_constraintHorizontal_bias="0.053"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/epi4"
-        app:layout_constraintVertical_bias="0.126" />
+        app:layout_constraintVertical_bias="0.15" />
 
     <ListView
         android:id="@+id/epi5liste"
-        android:layout_width="69dp"
-        android:layout_height="464dp"
+        android:layout_width="110dp"
+        android:layout_height="190dp"
         android:layout_marginEnd="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.182"
         app:layout_constraintStart_toEndOf="@+id/epi4liste"
         app:layout_constraintTop_toBottomOf="@+id/epi5"
-        app:layout_constraintVertical_bias="0.126" />
+        app:layout_constraintVertical_bias="0.15" />
 
     <ListView
         android:id="@+id/epi6liste"
-        android:layout_width="68dp"
-        android:layout_height="464dp"
+        android:layout_width="110dp"
+        android:layout_height="190dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.406"
         app:layout_constraintStart_toEndOf="@+id/epi5liste"
         app:layout_constraintTop_toBottomOf="@+id/epi6"
-        app:layout_constraintVertical_bias="0.126" />
+        app:layout_constraintVertical_bias="0.15" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
